--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,24 @@
 /*  your css code here. If applicable */
-main{
-	background-color: #f5f5f5;
-	padding:30px;
-}
-
-h1{
-	padding-left: 10px;
-}
-
-div{
-	background-color: white;
-	border: 1px solid lightgray;
-	line-height: 0px;
-	padding :10px;
-}
-
-
-p{
-	margin-left:20px;
-}
-
-.author{
-	font-style:italic;
-}
+.testimonial-section {
+    padding: 40px;
+    background-color: #f5f5f5;
+  }
+  
+  .testimonial {
+    padding: 20px;
+    border: 1px solid #ccc;
+    margin-bottom: 20px;
+    background-color: #fff;
+  }
+  .testimonial-text {
+    margin: 0;
+  }
+  
+  .testimonial-author {
+    margin: 0;
+    text-align: right;
+    font-style: italic;
+  }
 
 
 
